--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -4,7 +4,7 @@ license="All Rights Reserved"
 
 [[mods]]
 modId="betterskills"
-version="1.3.1"
+version="1.4.0"
 displayName="Better Skills"
 credits="Made by FeuSalamander"
 displayURL="https://www.curseforge.com/minecraft/mc-mods/better-skills"
@@ -24,7 +24,13 @@ add skills to your game
 
 
 [[dependencies.betterskills]]
-    modId="just_enough_items"
+    modId="just_enough_items-1.16.5"
+    mandatory=false
+    versionRange="[0,)"
+    ordering="NONE"
+    side="BOTH"
+[[dependencies.betterskills]]
+    modId="patchouli-1.16.5"
     mandatory=false
     versionRange="[0,)"
     ordering="NONE"
